fix missing border radius

--- a/frontend/src/app/application/_template/_overviews/day-overview/day-overview.component.sass
+++ b/frontend/src/app/application/_template/_overviews/day-overview/day-overview.component.sass
@@ -179,6 +179,7 @@
 
 :not(.cdk-drop-list-dragging) > .no-meal.meal-addable:hover
   background: whitesmoke
+  border-radius: 10px
 
   .add_button
     display: block
